--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "serverm",
   "version": "1.0.0",
-  "description": "Backend API for CRUD operations with MongoDB and Express",
-  "main": "index.js",
+  "description": "Backend server for CRUD app",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongoose": "^8.18.0"
-  },
-  "devDependencies": {
+    "mongoose": "^8.18.0",
     "nodemon": "^3.1.10"
   }
 }
